Groups page updated

--- a/Frontend /Main/Groups.html
+++ b/Frontend /Main/Groups.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Assets/CSS/bootstrap.min.css">
     <link rel="stylesheet" href="/Assets/CSS/index.css">
+    <link rel="stylesheet" href="/Assets/CSS/Groups.css">
     <title>Groups</title>
 </head>
 <body>
@@ -30,21 +31,55 @@
             </div>
         </header>
 
-        <div class="container ">
+        <div class="container p-4">
             <div class="row">
                 <div class="col">
 
+                    <div class="groups">
+                        <h3>Group Name </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
+                            et hic repellat non.
+                        </p>
+                        <a href="" class=" button">more</a>
+                    </div>
+
                 </div>
                 <div class="col">
-                    
+                    <div class="groups">
+                        <h3>Group Name </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
+                            et hic repellat non.
+                        </p>
+                        <a href="" class=" button">more</a>
+                    </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mt-4">
                 <div class="col">
-
+                    <div class="groups">
+                        <h3>Group Name </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
+                            et hic repellat non.
+                        </p>
+                        <a href="" class=" button">more</a>
+                    </div>
                 </div>
                 <div class="col">
-                    
+                    <div class="groups">
+                        <h3>Group Name </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
+                            et hic repellat non.
+                        </p>
+                        <a href="" class=" button">more</a>
+                    </div>
                 </div>
             </div>
         </div>
