groups page updated

--- a/Frontend /Main/Groups.html
+++ b/Frontend /Main/Groups.html
@@ -42,7 +42,7 @@
                             Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
                             et hic repellat non.
                         </p>
-                        <a href="" class=" button">more</a>
+                        <a href="" class=" button">join</a>
                     </div>
 
                 </div>
@@ -54,7 +54,7 @@
                             Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
                             et hic repellat non.
                         </p>
-                        <a href="" class=" button">more</a>
+                        <a href="" class=" button">join</a>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                             Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
                             et hic repellat non.
                         </p>
-                        <a href="" class=" button">more</a>
+                        <a href="" class=" button">join</a>
                     </div>
                 </div>
                 <div class="col">
@@ -78,7 +78,7 @@
                             Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
                             et hic repellat non.
                         </p>
-                        <a href="" class=" button">more</a>
+                        <a href="" class=" button">join</a>
                     </div>
                 </div>
             </div>
