--- a/Frontend /Main/Groups.html
+++ b/Frontend /Main/Groups.html
@@ -1,95 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Assets/CSS/bootstrap.min.css">
     <link rel="stylesheet" href="/Assets/CSS/index.css">
-    <link rel="stylesheet" href="/Assets/CSS/Groups.css">
     <title>Groups</title>
 </head>
+
 <body>
-    <div class="">
-        <header>
+    <header>
+        <div class="row m-4 justify-content-between">
+            <img id="imgLogo" src="/Assets/img/SQU.png" alt="SQU Web Site" class="col-2 ">
+            <button class="btn button fs-6 col-1 mt-3" style="height: 2.5rem;">Arabic</button>
+        </div>
 
-            <div class="m-4">
-                <img id="imgLogo" src="/Assets/img/SQU.png" alt="SQU Web Site" style="width: 14rem; height: 5rem;" >
-            </div>
-            
-            <div class="nav">
-                <ul class="">
-                    <li class="">
-                        <a href="/Main/index.html" title="About" >About</a>
-                    </li>
-                    <li class="">
-                        <a href="/Main/Events.html" title="Events" >Events</a>
-                    </li>
-                    <li class="">
-                        <a href="/Main/Groups.html" title="Groups" >Groups</a>
-                    </li>
-                </ul>
-            </div>
-        </header>
+        <nav class="navheader navbar navbar-expand-lg w-100 p-3">
 
-        <div class="container p-4">
-            <div class="row">
-                <div class="col">
-
-                    <div class="groups">
-                        <h3>Group Name </h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
-                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
-                            et hic repellat non.
-                        </p>
-                        <a href="" class=" button">join</a>
-                    </div>
-
-                </div>
-                <div class="col">
-                    <div class="groups">
-                        <h3>Group Name </h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
-                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
-                            et hic repellat non.
-                        </p>
-                        <a href="" class=" button">join</a>
-                    </div>
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-light px-5 fs-6" aria-current="page"
+                                href="/Main/index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light px-5 fs-6" aria-current="page"
+                                href="/Main/Events.html">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light px-5 fs-6" aria-current="page"
+                                href="/Main/Groups.html">Groups</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="row mt-4">
-                <div class="col">
-                    <div class="groups">
-                        <h3>Group Name </h3>
+        </nav>
+    </header>
+
+    <div class="container p-4 justify-content-around">
+        <div class="row mt-3">
+            <div class="col">
+                <div class="border border-dark rounded-4 border-2 p-3">
+                    <h4 class="text-center">Group Name </h4>
+                    <div class="d-flex justify-content-evenly">
+                        <img src="/Assets/img/noimg.jpeg" alt="" class="w-25 me-3">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
-                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore
+                            corporis.
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias
+                            adipisci,
                             et hic repellat non.
                         </p>
-                        <a href="" class=" button">join</a>
+                    </div>
+                    <div class=" d-flex justify-content-end align-items-center">
+                        <a href="" class="btn button rounded-4 px-3 pt-1 pb-1 fs-5">Join</a>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="groups">
-                        <h3>Group Name </h3>
+            </div>
+            <div class="col">
+                <div class="border border-dark rounded-4 border-2 p-3">
+                    <h4 class="text-center">Group Name </h4>
+                    <div class="d-flex justify-content-evenly">
+                        <img src="/Assets/img/noimg.jpeg" alt="" class="w-25 me-3">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore corporis. 
-                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias adipisci, 
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore
+                            corporis.
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias
+                            adipisci,
                             et hic repellat non.
                         </p>
-                        <a href="" class=" button">join</a>
+                    </div>
+                    <div class=" d-flex justify-content-end align-items-center">
+                        <a href="" class="btn button rounded-4 px-3 pt-1 pb-1 fs-5">Join</a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <footer class="footer">
-        </footer>
+        <div class="row mt-3">
+            <div class="col">
+                <div class="border border-dark rounded-4 border-2 p-3">
+                    <h4 class="text-center">Group Name </h4>
+                    <div class="d-flex justify-content-evenly">
+                        <img src="/Assets/img/noimg.jpeg" alt="" class="w-25 me-3">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore
+                            corporis.
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias
+                            adipisci,
+                            et hic repellat non.
+                        </p>
+                    </div>
+                    <div class=" d-flex justify-content-end align-items-center">
+                        <a href="" class="btn button rounded-4 px-3 pt-1 pb-1 fs-5">Join</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="border border-dark rounded-4 border-2 p-3">
+                    <h4 class="text-center">Group Name </h4>
+                    <div class="d-flex justify-content-evenly">
+                        <img src="/Assets/img/noimg.jpeg" alt="" class="w-25 me-3">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam et impedit error labore
+                            corporis.
+                            Animi eaque, incidunt dolorum ullam ipsa nulla perferendis expedita harum molestias
+                            adipisci,
+                            et hic repellat non.
+                        </p>
+                    </div>
+                    <div class=" d-flex justify-content-end align-items-center">
+                        <a href="" class="btn button rounded-4 px-3 pt-1 pb-1 fs-5">Join</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <footer class="d-flex  py-3 my-4 border-top" style="height: 10rem;">
+    </footer>
+
+
 
 
 
     <script src="/Assets/JS/bootstrap.min.js"></script>
+    <script src="/Assets/JS/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
