--- a/Frontend /Students/AddGroups.html
+++ b/Frontend /Students/AddGroups.html
@@ -61,7 +61,7 @@
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li><a class="dropdown-item fs-6 text" href="/Students/AddGroups.html">Add
-                                            Events</a></li>
+                                            Groups</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
@@ -99,7 +99,7 @@
                     <div class="form-check col-1 m-3">
                         <input class="form-check-input" type="checkbox" id="statusCheckbox">
                         <label class="form-check-label" for="statusCheckbox">
-                            Status
+                            Active
                         </label>
                     </div>
                 </div>
